# prism-inference

./: .gitignore  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
shaders/: attention.comp.glsl  attention.spv  attention_d256_fused4.comp.glsl  attention_d256_fused4.spv  attention_d256_fused_blocks.comp.glsl  attention_d256_fused_blocks.spv  attention_d256_moe.comp.glsl  attention_d256_moe.spv  attention_d256_shared_weights.comp.glsl  attention_d256_shared_weights.spv  attention_softmax.comp.glsl  attention_softmax.spv  attention_windowed.comp.glsl  attention_windowed.spv  attention_windowed_16x16.comp.glsl  attention_windowed_16x16.spv  attention_windowed_d256.comp.glsl  attention_windowed_d256.spv  attention_windowed_fast.comp.glsl  attention_windowed_fast.spv  attention_windowed_h1024.comp.glsl  attention_windowed_h1024.spv  attention_windowed_h2048.comp.glsl  attention_windowed_h2048.spv  bench_ffn_1tok.comp.glsl  bench_ffn_1tok.spv  bench_ffn_4tok.comp.glsl  bench_ffn_4tok.spv  bench_ffn_cv256.comp.glsl  bench_ffn_cv256.spv  bench_ffn_split.comp.glsl  bench_ffn_split.spv  bench_ffn_w1only.comp.glsl  bench_ffn_w1only.spv  bench_ffn_w2only.comp.glsl  bench_ffn_w2only.spv  bench_matmul_12call.comp.glsl  bench_matmul_12call.spv  bench_matmul_1call.comp.glsl  bench_matmul_1call.spv  (+129 more)
vulkan_engine/: CMakeLists.txt  bench_transformer.cpp  benchmark.cpp  benchmark_v2.cpp  export_weights.py  prism_linear_bench.cpp  prism_moe_bench.cpp  prism_overhead_bench.cpp  prism_scaling_bench.cpp  prism_v2_engine.cpp  prism_v3_bench.cpp  prism_vulkan.cpp  prism_vulkan.h  query_coopmat.cpp
